Rollback changes to ResourceBundle.java
PiperOrigin-RevId: 544170954